# vk-sandbox

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  imgui.ini  main.cpp
includes/: vk-mesh.hpp  vk_camera.hpp  vk_descriptors.hpp  vk_engine.hpp  vk_images.hpp  vk_initializers.hpp  vk_loader.hpp  vk_pipelines.hpp  vk_shaders.hpp  vk_textures.hpp  vk_types.hpp
shaders/: colored_triangle.frag  colored_triangle.vert  colored_triangle_frag.spv  colored_triangle_mesh.vert  colored_triangle_mesh_vert.spv  colored_triangle_vert.spv  gradient.comp  gradient_color.comp  gradient_color_comp.spv  gradient_comp.spv  input_structures.glsl  mesh.frag  mesh.vert  mesh_frag.spv  mesh_vert.spv  red_triangle.frag  sky.comp  sky_comp.spv  tex_image.frag  tex_image_frag.spv  triangle.vert  triangle_mesh.frag  triangle_mesh.vert  triangle_mesh_frag.spv  triangle_mesh_vert.spv
sources/: vk-mesh.cpp  vk_camera.cpp  vk_descriptors.cpp  vk_engine.cpp  vk_images.cpp  vk_initializers.cpp  vk_loader.cpp  vk_pipelines.cpp  vk_shaders.cpp  vk_textures.cpp
